--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,229 @@
-.App {
+p, h3 {
+  margin: 0;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+}
+
+.app {
   background-color: #EBF0FF;
   width: 100%;
   height: fit-content;
   min-height: 100vh;
+}
+
+.main-container {
+  padding: 0 8.264vw 0 8.333vw
+}
+
+.main-container .section-1 {
+  padding-top: 14.653vw;
+  display: flex;
+  justify-content: space-between;
+}
+.main-container .section-1 .text-section {
+  width: 40.417vw;
+  height: 44.861vw;
+}
+.main-container .section-1 .text-section .title {
+  font-family: 'Inter';
+  font-size: 3.333vw;
+  font-weight: 700;
+  line-height: 4.028vw;
+}
+
+.main-container .section-1 .phone-image {
+  width: 42.014vw;
+  height: 46.458vw;
+}
+
+.main-container .section-1 .feedback-section {
+  margin-top: 4.444vw;
+  width: 40.069vw;
+  height: 32.361vw;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-container .section-1 .feedback {
+  height: 7.986vw;
+  display: flex;
+  padding: 1.667vw;
+  gap: 1.667vw;
+  border-radius: 0.694vw;
+  background: #F6FBF8;
+  margin-left: 0.347vw;
+  box-sizing: border-box;
+  margin-bottom: 1.111vw;
+}
+.main-container .section-1 .feedback-shadow {
+  box-shadow: 0 1.667vw 1.667vw 0 #00000014;
+}
+.main-container .section-1 .feedback-gradient{
+  background: linear-gradient(180deg, #F6FBF8 0%, #F6FBF8 0.01%, rgba(246, 251, 248, 0) 100%);
+}
+.main-container .section-1 .feedback .img-wraper {
+  width: 4.444vw;
+  height: 4.444vw;
+  border-radius: 2.222vw;
+}
+.main-container .section-1 .feedback .detail-wraper {
+  width: 30.625vw;
+  font-family: 'Inter';
+  font-size: 1.111vw;
+  font-weight: 500;
+  line-height: 1.344vw;
+  color: #000000;
+}
+.main-container .section-1 .feedback .detail-wraper p {
+  margin-top: 0.694vw;
+  color: #515151;
+}
+.main-container .support-section {
+  background: #F6FBF8;
+  display: flex;
+  width: 83.403vw;
+  margin-top: 6.944vw;
+  height: 11.319vw;
+  padding: 1.667vw;
+  gap: 0.694vw;
+  border-radius: 0.694vw;
+  box-sizing: border-box;
+  box-shadow: 0 2.361vw 3.056vw -1.389vw #B9CEEA40;
+}
+.main-container .support-section .support-box {
+  width: 26.227vw;
+  height: 7.986vw;
+  padding: 1.667vw;
+  display: flex;
+  align-items: center;
+  gap: 1.667vw;
+  border-radius: 0.694vw;
+  box-sizing: border-box;
+}
+.main-container .support-section .support-box .support-img-wraper {
+  width: 4.444vw;
+  height: 4.444vw;
+}
+.main-container .support-section .support-box .support-text {
+  width: 16.783vw;
+  font-family: 'Inter';
+  font-size: 1.111vw;
+  font-weight: 500;
+  line-height: 1.344vw;
+  color: #515151;
+}
+.main-container .support-section .support-box .support-text h3{
+  margin-bottom: 0.694vw;
+  color: #F89D21;
+}
+.main-container .registration-section {
+  margin-top: 6.944vw;
+  width: 83.403vw;
+  height: 45.069vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 7.986vw;
+  border-radius: 0.694vw;
+  overflow: hidden;
+}
+.main-container .registration-section .reg-img-wraper {
+  width: 35.069vw;
+  height: 39.931vw;
+}
+.main-container .registration-section .reg-box {
+  position: relative;
+  width: 37.292vw;
+  height: 45.069vw;
+  font-family: 'Inter';
+  font-size: 1.111vw;
+  font-weight: 500;
+  line-height: 1.344vw;
+  color: #515151;
+  background: #FFFFFF;
+  box-shadow: 0 2.361vw 3.056vw -1.389vw #B9CEEA40;
+  border-radius: 0.694vw;
+}
+.main-container .registration-section .reg-box .reg-form {
+  padding: 3.333vw;
+  border-radius: 0.694vw;
+}
+.main-container .registration-section .title {
+  font-size: 2.5vw;
+  font-weight: 800;
+  line-height: 3.026vw;
+  color: #000000;
+  margin-bottom: 1.667vw;
+}
+.main-container .registration-section .description{
+  margin-bottom: 3.333vw;
+}
+.main-container .registration-section .name,
+.main-container .registration-section .company,
+.main-container .registration-section .email {
+  color: #000000;
+  margin-bottom: 1.115vw;
+}
+.main-container .registration-section input {
+  all: unset;
+  margin-block: 0.556vw;
+  height: 3.542vw;
+  width: 100%;
+  padding: 1.111vw;
+  border-radius: 0.347vw;
+  background: #F9FAFF;
+  border: 0.069vw solid #DEE6FF;
+  box-sizing: border-box;
+} 
+.main-container .registration-section input::placeholder {
+  color: #AAAAAA;
+
+}
+.main-container .registration-section  span {
+  color: #EB5939;
+}
+.main-container .registration-section .reg-form button{
+  width: 30.625vw;
+  height: 3.542vw;
+  padding: 1.111vw 2.222vw;
+  border-radius: 2.778vw;
+  background: #F89D21;
+  border: 0.069vw solid #F89D21;
+  box-shadow: 0 0.694vw 2.361vw 0 #F89D2180;
+  position: absolute;
+  bottom: 3.333vw;
+  font-family: 'Inter';
+  color: white;
+  font-size: 1.111vw;
+  font-weight: 700;
+  line-height: 1.344vw;
+}
+.main-container .registration-section .reg-complete {
+  position: absolute;
+  top: 0;
+  width: inherit;
+  height: inherit;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1.615vw;
+  padding: 0 3.333vw;
+  box-sizing: border-box;
+  font-family: Inter;
+  font-size: 1.111vw;
+  font-weight: 500;
+  line-height: 1.344vw;
+  color: #515151;
+  background-color: white;
+  border-radius: 0.694vw;
+  opacity: 0;
+}
+.main-container .registration-section .reg-complete h3{
+  font-size: 2.5vw;
+  font-weight: 800;
+  line-height: 3.026vw;
+  color: #057D21;
 }
