--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,6 +1,3 @@
-.navbar-container p {
-    margin: 0;
-}
 .navbar-container {
     position: absolute;
     top: 0;
@@ -44,7 +41,7 @@
 }
 .navbar-container .pages button {
     all: unset;
-    width: 150px;
+    width: 10.417vw;
     height: 3.542vw;
     padding: 1.111vw 2.222vw;
     gap: 0.694vw;
